<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dalsi"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@color/dalsi"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingStart="25dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/calculateInfoHeader"
            android:textColor="@color/textall"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/buttonCloseMove2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/cross"
                android:onClick="popUpDismiss" />
        </LinearLayout>

    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textall">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/calculateMain1"
                android:textColor="@color/background"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/calculateMain2"
                android:textColor="@color/background"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/calculateMain3"
                android:textColor="@color/background"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/calculateMain4"
                android:textColor="@color/background"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>